# Basementen-Vault

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  deny.toml  docker-compose.yml  rust-toolchain.toml
.github/: dependabot.yml
.github/workflows/: android.yml  ci.yml  fuzz.yml  release.yml
apps/desktop/: README.md
apps/desktop-core/: Cargo.toml
apps/desktop-core/data/: eff_large_wordlist.LICENSE
apps/desktop-core/src/: api.rs  generator.rs  health.rs  hibp.rs  items.rs  lib.rs  mfa.rs  password.rs  rollback.rs  session.rs  store.rs  transfer.rs
apps/desktop-core/tests/: desktop_core.rs
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/desktop/ui/: index.html  main.js  styles.css
core/vault-core/: Cargo.toml
core/vault-core/src/: account.rs  envelope.rs  error.rs  export.rs  harden.rs  item.rs  kdf.rs  keys.rs  lib.rs  recovery.rs  secmem.rs
core/vault-core/tests/: crypto_flows.rs  proptests.proptest-regressions  proptests.rs
core/vault-sync/: Cargo.toml
core/vault-sync/src/: engine.rs  lib.rs  memory.rs  types.rs
core/vault-sync/tests/: sync_flows.rs
docs/: CRYPTOGRAPHIC_INVARIANTS.md  IMPLEMENTATION_PLAN.md  METADATA.md  MOBILE.md  RELEASE_CHECKLIST.md  REPRODUCIBLE_BUILDS.md  REVIEW_RESPONSE.md  RUNBOOK.md  SELF_HOSTING.md  THREAT_MODEL.md
fuzz/: .gitignore  Cargo.toml  README.md
fuzz/corpus/import_csv/: seed_bitwarden.csv  seed_generic.csv
fuzz/corpus/import_encrypted/: seed.json
fuzz/corpus/item_from_plaintext/: seed_card.json  seed_login.json
fuzz/fuzz_targets/: import_csv.rs  import_encrypted.rs  item_from_plaintext.rs
server/: Dockerfile
server/vault-server/: Cargo.toml
server/vault-server/migrations/: 0001_init.sql  0002_items.sql  0003_recovery.sql  0004_kdf_salt.sql  0005_session_lifecycle.sql  0006_sync_checkpoint.sql  0007_totp_replay.sql  0008_server_secrets.sql
server/vault-server/src/: config.rs  db.rs  error.rs  lib.rs  mailer.rs  main.rs  rate_limit.rs  security.rs  state.rs  totp.rs
server/vault-server/src/routes/: accounts.rs  auth.rs  items.rs  mfa.rs  mod.rs  recovery.rs  sessions.rs  vault.rs
server/vault-server/tests/: api_flows.rs  recovery_flows.rs
