[package]
name = "desktop-core"
version = "1.0.0-beta.4"
description = "Desktop client core for Basementen Vault: local replica, API client, session, generator"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
vault-core = { path = "../../core/vault-core" }
vault-sync = { path = "../../core/vault-sync" }

rusqlite = { version = "0.32", features = ["bundled"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
qrcode = { version = "0.14", default-features = false, features = ["svg"] }
rand = "0.10"
sha1 = "0.11"
thiserror = "2"
zxcvbn = "3"
uuid = { version = "1", features = ["v7"] }
zeroize = { version = "1", features = ["derive"] }
csv = "1"

[dev-dependencies]
vault-server = { path = "../../server/vault-server" }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net"] }
axum = "0.8"
tempfile = "3"
sqlx = { version = "0.9", default-features = false, features = ["runtime-tokio", "sqlite"] }

[lints]
workspace = true
