[package]
name = "vault-core"
version = "0.1.0"
description = "Zero-knowledge crypto core for Basementen Vault: key hierarchy, envelope encryption, item encryption"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
argon2 = { version = "0.5", features = ["std"] }
chacha20poly1305 = "0.10"
hkdf = "0.12"
sha2 = "0.10"
zeroize = { version = "1", features = ["derive"] }
rand_core = { version = "0.6", features = ["getrandom"] }
subtle = "2"
thiserror = "2"
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
serde_json = "1"
chacha20poly1305 = "0.10"

[lints]
workspace = true
