[package]
name = "vault-core"
version = "1.0.0-beta.4"
description = "Zero-knowledge crypto core for Basementen Vault: key hierarchy, envelope encryption, item encryption"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
argon2 = { version = "0.5", features = ["std"] }
chacha20poly1305 = "0.10"
hkdf = "0.12"
sha2 = "0.10"
zeroize = { version = "1", features = ["derive"] }
rand_core = { version = "0.6", features = ["getrandom"] }
subtle = "2"
thiserror = "2"
# Cross-platform mlock/VirtualLock for key pages; its internal `unsafe` keeps
# the syscall out of our `forbid(unsafe)` crates.
region = "3"
serde = { version = "1", features = ["derive"] }

# Core-dump suppression (harden.rs). Target-gated so non-unix / wasm builds
# compile a no-op and never pull these in. Both wrap their syscalls behind a
# safe API, keeping `forbid(unsafe)` intact.
[target.'cfg(unix)'.dependencies]
rlimit = "0.11"

[target.'cfg(target_os = "linux")'.dependencies]
prctl = "1"

[dev-dependencies]
serde_json = "1"
chacha20poly1305 = "0.10"
proptest = "1"
rand = "0.8"

[lints]
workspace = true
