[package]
name = "vault-sync"
version = "0.1.0"
description = "Offline-first sync engine for Basementen Vault clients: local replica, op queue, delta sync"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
vault-core = { path = "../vault-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"

[dev-dependencies]
# End-to-end tests drive the engine against the real server over an in-memory
# axum router (dev-only edge; the library itself is transport-agnostic).
vault-server = { path = "../../server/vault-server" }
axum = "0.8"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
base64 = "0.22"
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "sqlite"] }

[lints]
workspace = true
