[package]
name = "vault-server"
version = "1.0.0-beta.1"
description = "Self-hostable API server for Basementen Vault: accounts, auth, MFA, encrypted key storage"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
vault-core = { path = "../../core/vault-core" }

axum = "0.8"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "signal", "sync"] }
async-stream = "0.3"
futures-util = { version = "0.3", default-features = false }
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "sqlite", "migrate", "macros", "derive"] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"

argon2 = { version = "0.5", features = ["std"] }
rand = "0.8"
sha2 = "0.10"
hmac = "0.12"
sha1 = "0.10"
subtle = "2"
base64 = "0.22"
data-encoding = "2"

lettre = { version = "0.11", default-features = false, features = ["smtp-transport", "tokio1-rustls-tls", "builder", "hostname"] }

thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"

[lints]
workspace = true
